# configsync

./: Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  release.sh  verify.sh  verify_watch.sh
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  main.rs
src/cli/: args.rs  handler.rs
src/core/: doctor.rs  mod.rs  state.rs  watch.rs
src/core/config/: loader.rs  schema.rs
src/core/engine/: add.rs  apply.rs  init.rs  mod.rs  pull.rs  push.rs
src/core/fs/: symlink.rs
src/core/git/: repository.rs
src/core/secret/: cipher.rs  keys.rs  mod.rs
tests/: cli_integration.rs  integration_test.sh
