[package]
name = "configsync"
version = "0.2.0"
edition = "2021"
authors = ["Koshik Debanath"]
description = "Team dotfile sync engine"
repository = "https://github.com/kowshik24/configsync"
license = "MIT"

[profile.release]
strip = true        # Minimal binary size
lto = true
codegen-units = 1

[dependencies]
# CLI & configuration
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"   # platform config/cache paths

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Git
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = { version = "1.1" }

# Encryption
age = { version = "0.10", features = ["armor"] }
anyhow = "1.0.101"
shellexpand = "3.0"
secrecy = "0.8"


# Symlinks (Windows)
[target.'cfg(windows)'.dependencies]
junction = "1.0"

# TUI (optional)
ratatui = "0.26"
crossterm = "0.27"

# Logging & errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

# Utilities
sha2 = "0.10"
glob = "0.3"

